# Csoport3_Ebrake-

./: behavior_node.cpp
behavior/: CMakeLists.txt  package.xml
behavior/include/behavior/: behavior_node.hpp
behavior/launch/: main_system.launch.py
behavior/src/: behavior_node.cpp
controller/: CMakeLists.txt  controller_node.cpp  controller_node.hpp  package.xml
controller/include/controller/: controller_node.hpp
controller/src/: controller_node.cpp
ebrake/: CMakeLists.txt  package.xml
ebrake/include/ebrake/: behavior_node.hpp  controller_node.hpp
ebrake/src/: planner.node.cpp
install/: local_setup.sh  setup.sh
install/basic_concepts/lib/basic_concepts/: publisher_demo  subscriber_demo
install/basic_concepts/share/basic_concepts/: local_setup.sh  package.sh
install/behavior/lib/behavior/: behavior_node
install/behavior/share/behavior/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/behavior/share/behavior/cmake/: behaviorConfig.cmake
install/controller/lib/controller/: controller_node
install/controller/share/controller/: package.sh
install/planner/lib/planner/: planner_node
install/planner/share/planner/: local_setup.sh  package.sh
install/velocity_estimator/lib/velocity_estimator/: pose_publisher  velocity_estimator
install/velocity_estimator/share/velocity_estimator/: package.sh
planner/: CMakeLists.txt  package.xml
planner/include/planner/: planner_node.hpp
planner/src/: planner_node.cpp
